Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24672

When destroyed() signal is called the slot of another variable is already deleted

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.0.0 RC 1, 5.0.0 RC 2
    • 4.6.3, 4.7.4, 4.8.0, 5.0.0 Beta 1
    • Core: Object Model
    • None
    • Windows 7

      If you have two variables (A and B) where and you connect B's destroyed() signal to A, it sometimes goes to A's slot and sometimes not. It depends of the class hierarchy if the slot is run. I attached an example application to reproduce the issue. In the application there is a flag that you can use to modify the hierarchy to reproduce the issue or make it to work fine.

      This bug report might be a duplicate of QTBUG-9525.

        1. DestroyedTest.zip
          0.8 kB
          Qt Support
        2. QTBUG-24672.7z
          0.8 kB
          Janne Anttila
        3. enable_destroyed_signal_for_widget_children_qt_4.8.patch
          0.8 kB
          Janne Anttila
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            laknoll Lars Knoll
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes